src/test/ui/consts/const-eval/feature-gate-const_fn_ptr.stderr
error[E0658]: function pointers in const fn are unstable
  --> $DIR/feature-gate-const_fn_ptr.rs:9:5
   |
LL |     X()
   |     ^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51909
   = help: add `#![feature(const_fn_ptr)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
