src/test/ui/consts/const-eval/feature-gate-const_fn_ptr.rs
#![feature(const_fn)]

fn main() {}

const fn foo() {}
const X: fn() = foo;

const fn bar() {
    X()
    //~^ ERROR function pointers in const fn are unstable
}
